# Underwrite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEMO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  LICENSE  RAILWAY_DEPLOYMENT.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_SUMMARY.md  TESTING.md  rust-toolchain.toml  walkthrough.md
.cargo/: config.toml
agent/: Cargo.toml
agent/src/: lib.rs  main.rs
contracts/: Cargo.toml  Odra.toml
contracts/src/: lib.rs  settlement.rs  token.rs
dashboard/: index.html  styles.css
deployments/: casper-testnet.example.json
docs/: PRODUCT_POSITIONING.md  WALLET_MODE_PLAN.md
fixtures/: observation.json  risk-attestation.cargo-delay.payload.json  signed-observation.json  signed-risk-attestation.cargo-delay.json
scripts/: attempt-duplicate-claim.sh  attempt-stale-claim.sh  build-contracts.sh  clean-request-artifacts.sh  deploy-testnet.sh  diagnose-testnet.sh  fund-vault.sh  generate-fresh-attestation.sh  generate-stale-attestation.sh  preflight-testnet.sh  railway-entrypoint.sh  record-evidence.mjs  register-policy-self.sh  register-policy.sh  rpc-debug-proxy.mjs  run-agent.sh  run-testnet-demo.sh  submit-claim.sh  submit-valid-claim.sh
web/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: evidence.ts  globals.css  layout.tsx  page.tsx  underwrite-ui.tsx
web/app/agent/: page.tsx
web/app/api/agent/request-verification/: route.test.ts  route.ts
web/app/api/config/: route.ts
web/app/api/operations/run/: route.ts
web/app/api/operations/submit-deploy/: route.ts
web/app/evidence/: page.tsx
web/app/operate/: page.tsx
web/app/policy/: page.tsx
web/lib/: agent-request-handler.ts  agent-request.ts  casper-wallet-deploy.ts
web/public/evidence/: wallet-mode-testnet.json
