[package]
name = "underwrite-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
odra = { version = "2.8.1", default-features = false }
odra-modules = { version = "2.8.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hex.workspace = true
odra-build = "2.8.1"
odra-cli = { version = "2.8.1", default-features = false }
odra-casper-livenet-env = { version = "2.8.1", optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
odra-test = "2.8.1"
hex.workspace = true

[build-dependencies]
odra-build = "2.8.1"

[features]
default = []
livenet = ["dep:odra-casper-livenet-env"]

[[bin]]
name = "underwrite_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "underwrite_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "deploy_testnet"
path = "bin/deploy_testnet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "diagnose_testnet"
path = "bin/diagnose_testnet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "register_policy_testnet"
path = "bin/register_policy_testnet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "register_policy_self_testnet"
path = "bin/register_policy_self_testnet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "submit_claim_testnet"
path = "bin/submit_claim_testnet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "submit_duplicate_claim_testnet"
path = "bin/submit_duplicate_claim_testnet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "submit_stale_claim_testnet"
path = "bin/submit_stale_claim_testnet.rs"
required-features = ["livenet"]
test = false
